--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,75 @@
 buildscript {
+
     repositories {
         jcenter()
+        mavenLocal()
+        mavenCentral()
 
-        maven { url = 'http://files.minecraftforge.net/maven' }
+        maven { url 'https://files.minecraftforge.net/maven' }
+        maven { url 'https://plugins.gradle.org/m2' }
+        maven { url 'https://repo.spongepowered.org/maven' }
     }
+
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.1-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '2.1-SNAPSHOT'
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.6-SNAPSHOT'
+        classpath group: 'com.github.jengelman.gradle.plugins', name: 'shadow', version: '4.0.4'
     }
 }
+
+apply plugin: 'java'
+apply plugin: 'idea'
+
 apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'org.spongepowered.mixin'
 
-version = '1.0-SNAPSHOT'
-group = 'tk.booky'
-archivesBaseName = 'bookyClient'
+apply plugin: 'com.github.johnrengelman.shadow'
 
-repositories{
+version = mod_version
+group = mod_group
+archivesBaseName = mod_id
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+compileJava.options.encoding = 'UTF-8'
+
+minecraft {
+    version = minecraft_version + '-' + forge_version
+    runDir = 'run'
+    mappings = mappings_version
+    makeObfSourceJar = true
+
+    String resolved_core_plugin = mod_core_plugin.replace('${mod_group}', mod_group).replace('${mod_id}', mod_id)
+    clientJvmArgs += '-Dfml.coreMods.load=' + resolved_core_plugin
+    serverJvmArgs += '-Dfml.coreMods.load=' + resolved_core_plugin
+
+    String resolved_core_config = mod_mixin_configs.replace('${mod_id}', mod_id)
+    clientRunArgs += '--mixin ' + resolved_core_config
+    serverRunArgs += '--mixin ' + resolved_core_config
+}
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+    jcenter()
+
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://repo.spongepowered.org/maven/' }
 }
 
 dependencies {
-}
+    compile('org.spongepowered:mixin:0.7.10-SNAPSHOT') {
+        exclude module: 'launchwrapper'
+    }
 
-minecraft {
-    version = '1.8.9-11.15.1.2318-1.8.9'
-    runDir = 'run'
-    mappings = 'stable_20'
+    compile 'com.jagrosh:DiscordIPC:0.4'
+    compile('commons-io:commons-io') {
+        version {
+            strictly '2.5'
+        }
+    }
+
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
 
 processResources {
@@ -32,10 +78,59 @@ processResources {
 
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-        expand 'version': project.version, 'mcversion': project.minecraft.version
+
+        expand 'mod_id': mod_id, 'mod_name': mod_name, 'version': project.version,
+                'mcversion': project.minecraft.version, 'mod_description': mod_description,
+                'mod_author': mod_author
     }
 
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+
+    rename '(.+_at.cfg)', 'META-INF/$1'
 }
+
+mixin {
+    add sourceSets.main, mod_mixin_configs.replace('${mod_id}', mod_id).replace('.json', '.refmap.json')
+}
+
+jar {
+    manifest.attributes(
+            'MixinConfigs': mod_mixin_configs.replace('${mod_id}', mod_id),
+            'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
+            'TweakOrder': '0',
+            'FMLCorePluginContainsFMLMod': 'true',
+            'FMLCorePlugin': mod_core_plugin.replace('${mod_group}', mod_group).replace('${mod_id}', mod_id),
+            'FMLAT': mod_access_transformer.replace('${mod_id}', mod_id),
+            'Manifest-Version': 1.0,
+    )
+}
+
+shadowJar {
+    dependencies {
+        include(dependency('org.spongepowered:mixin'))
+        include(dependency('com.jagrosh:DiscordIPC'))
+        include(dependency('org.json:json'))
+        include(dependency('org.slf4j:slf4j-api'))
+        include(dependency('log4j:log4j:1.2.17'))
+        include(dependency('org.scijava:native-lib-loader'))
+        include(dependency('com.kohlschutter.junixsocket:junixsocket-common'))
+        include(dependency('com.kohlschutter.junixsocket:junixsocket-native-common'))
+    }
+
+    exclude 'dummyThing'
+    exclude 'LICENSE.txt'
+
+    classifier = ''
+}
+
+reobf { shadowJar { mappingType = 'SEARGE' } }
+tasks.reobfShadowJar.mustRunAfter shadowJar
+
+configurations {
+    external
+    compile.extendsFrom external
+}
+
+build.dependsOn shadowJar
