--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,16 @@
 org.gradle.jvmargs = '-Xmx4096m'
+
+mod_id = bookyclient
+mod_name = bookyClient
+mod_group = tk.bookyclient
+mod_version = 1.0-SNAPSHOT
+mod_author = ["booky10"]
+mod_description = This is a minecraft client.
+
+minecraft_version = 1.8.9
+forge_version = 11.15.1.2318-1.8.9
+mappings_version = stable_22
+
+mod_core_plugin = ${mod_group}.${mod_id}.core.ClientFMLLoadingPlugin
+mod_access_transformer = ${mod_ire}_at.cfg
+mod_mixin_configs = mixins.${mod_id}.json
