fixed not being recognized as a mod

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,5 @@ forge_version = 11.15.1.2318-1.8.9
 mappings_version = stable_22
 
 mod_core_plugin = ${mod_group}.${mod_id}.core.ClientFMLLoadingPlugin
-mod_access_transformer = ${mod_ire}_at.cfg
+mod_access_transformer = ${mod_id}_at.cfg
 mod_mixin_configs = mixins.${mod_id}.json
