--- a/build.gradle
+++ b/build.gradle
@@ -97,13 +97,15 @@ mixin {
 
 jar {
     manifest.attributes(
-            'MixinConfigs': mod_mixin_configs.replace('${mod_id}', mod_id),
+            'Manifest-Version': 1.0,
+            'ModSide': 'CLIENT',
+            'FMLCorePluginContainsFMLMod': 'Yes, yes it does',
+            'FMLAT': mod_access_transformer.replace('${mod_id}', mod_id),
+            'FMLCorePlugin': mod_core_plugin.replace('${mod_group}', mod_group).replace('${mod_id}', mod_id),
+
             'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
             'TweakOrder': '0',
-            'FMLCorePluginContainsFMLMod': 'true',
-            'FMLCorePlugin': mod_core_plugin.replace('${mod_group}', mod_group).replace('${mod_id}', mod_id),
-            'FMLAT': mod_access_transformer.replace('${mod_id}', mod_id),
-            'Manifest-Version': 1.0,
+            'MixinConfigs': mod_mixin_configs.replace('${mod_id}', mod_id),
     )
 }
 
