--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,24 @@ apply plugin: 'org.spongepowered.mixin'
 
 apply plugin: 'com.github.johnrengelman.shadow'
 
-version = mod_version
+def getGitHash = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'rev-parse', '--short', 'HEAD'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+def getGitBranch = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine 'git', 'rev-parse', '--abbrev-ref', 'HEAD'
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+
+version = "${mod_version}-${getGitBranch}-${getGitHash}"
 group = mod_group
 archivesBaseName = mod_id
 
