--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    if: "!contains(github.ref, 'develop') || (!contains(github.event.head_commit.message, 'skip build') && !contains(github.event.head_commit.message, 'docker build'))"
+    if: "!contains(github.ref, 'develop') || (!contains(github.event.head_commit.message, 'skip ci'))"
 
     steps:
       - name: Checkout
