--- a/build.gradle
+++ b/build.gradle
@@ -55,13 +55,9 @@ minecraft {
     mappings = mappings_version
     makeObfSourceJar = true
 
-    String resolved_core_plugin = mod_core_plugin.replace('${mod_group}', mod_group).replace('${mod_id}', mod_id)
-    clientJvmArgs += '-Dfml.coreMods.load=' + resolved_core_plugin
-    serverJvmArgs += '-Dfml.coreMods.load=' + resolved_core_plugin
-
-    String resolved_core_config = mod_mixin_configs.replace('${mod_id}', mod_id)
-    clientRunArgs += '--mixin ' + resolved_core_config
-    serverRunArgs += '--mixin ' + resolved_core_config
+    String resolved_mixin_configs = mod_mixin_configs.replace('${mod_id}', mod_id)
+    clientRunArgs += '--mixin ' + resolved_mixin_configs
+    serverRunArgs += '--mixin ' + resolved_mixin_configs
 }
 
 repositories {
@@ -129,9 +125,7 @@ jar {
     manifest.attributes(
             'Manifest-Version': 1.0,
             'ModSide': 'CLIENT',
-            'FMLCorePluginContainsFMLMod': 'Yes, yes it does',
             'FMLAT': mod_access_transformer.replace('${mod_id}', mod_id),
-            'FMLCorePlugin': mod_core_plugin.replace('${mod_group}', mod_group).replace('${mod_id}', mod_id),
 
             'TweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
             'TweakOrder': '0',
