--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,10 @@ minecraft {
     mappings = mappings_version
     makeObfSourceJar = true
 
+    String resolved_core_mod = mod_core_plugin.replace('${mod_group}', mod_group).replace('${mod_id}', mod_id)
+    clientJvmArgs += '-Dfml.coreMods.load=' + resolved_core_mod
+    serverJvmArgs += '-Dfml.coreMods.load=' + resolved_core_mod
+
     String resolved_mixin_configs = mod_mixin_configs.replace('${mod_id}', mod_id)
     clientRunArgs += '--mixin ' + resolved_mixin_configs
     serverRunArgs += '--mixin ' + resolved_mixin_configs
