added remapped variable name

--- a/src/main/resources/bookyclient_at.cfg
+++ b/src/main/resources/bookyclient_at.cfg
@@ -1,2 +1,2 @@
 # GuiTextField
-protected net.minecraft.client.gui.GuiTextField field_146216_j
+protected net.minecraft.client.gui.GuiTextField field_146216_j # text
