should have read the access transformer docs

--- a/src/main/resources/bookyclient_at.cfg
+++ b/src/main/resources/bookyclient_at.cfg
@@ -1,2 +1,5 @@
 # GuiTextField
 protected net.minecraft.client.gui.GuiTextField field_146216_j # text
+
+# RenderHelper
+public net.minecraft.client.renderer.RenderHelper func_74521_a(FFFF)Ljava/nio/FloatBuffer; # setColorBuffer
