implemented blur option

--- a/src/main/resources/bookyclient_at.cfg
+++ b/src/main/resources/bookyclient_at.cfg
@@ -3,3 +3,9 @@ protected net.minecraft.client.gui.GuiTextField field_146216_j # text
 
 # RenderHelper
 public net.minecraft.client.renderer.RenderHelper func_74521_a(FFFF)Ljava/nio/FloatBuffer; # setColorBuffer
+
+# EntityRenderer
+public net.minecraft.client.renderer.EntityRenderer func_175069_a(Lnet/minecraft/util/ResourceLocation;)V # loadShader
+
+# GuiScreen
+public net.minecraft.client.gui.Gui func_73733_a(IIIIII)V # drawGradientRect
