implemented smooth scrolling

--- a/src/main/resources/bookyclient_at.cfg
+++ b/src/main/resources/bookyclient_at.cfg
@@ -9,3 +9,6 @@ public net.minecraft.client.renderer.EntityRenderer func_175069_a(Lnet/minecraft
 
 # GuiScreen
 public net.minecraft.client.gui.Gui func_73733_a(IIIIII)V # drawGradientRect
+
+# GuiSlot
+public net.minecraft.client.gui.GuiSlot func_148121_k()V # bindAmountScrolled
